--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 </head>
 <body>
     <div class="app-container">
+
+
         <h2 class="app-name">WEATHER APP?</h2>
+
+
         <div class="top">
             <input type="text" id="search" placeholder="ENTER A LOCATION">
             <button id="go">GO</button>
         </div>
+
+
         <div class="middle">
             <div class="date-toggle" style="display: flex;">
                 <div class="date-box">
@@ -40,14 +46,26 @@
                 <p id="condition">...</p>
             </div>
         </div>
+
+
         <div class="bottom">
             <div class="weather-info">
-                <div style="display: grid;">
-                    <p id="wind">Wind: ...</p>
-                    <p id="humidity">Humidity: ...</p>
+                <div class="info-container" style="display: flex;">
+                    <div class="wind-box" style="display: flex;">
+                        <p id="wind">Wind:</p>
+                        <p id="windVal">...</p>
+                        <p>mph</p>
+                    </div>
+                    <div style="display: flex;">
+                        <p id="humidity">Humidity:</p>
+                        <p id="humidityVal">...</p>
+                    </div>
+                    
                 </div>
             </div>
         </div>
+
+
     </div>
 </body>
 <script type="module" src="app.js"></script>
